Barra navegacion y listas de usuarios, medicos, pacientes y turnos

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+a{
+  color:white
+}
+main{
+  margin-left: 20px;
+  margin-right: 20px;
+}
